--- a/covid2.ipynb
+++ b/covid2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AGE                 True\n",
+       "TEMP               False\n",
+       "HEART_RATE         False\n",
+       "SAT_O2             False\n",
+       "BLOOD_PRES_SYS     False\n",
+       "BLOOD_PRES_DIAS    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_num.isna().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AGE                False\n",
+       "TEMP               False\n",
+       "HEART_RATE         False\n",
+       "SAT_O2             False\n",
+       "BLOOD_PRES_SYS     False\n",
+       "BLOOD_PRES_DIAS    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_num['AGE'].fillna(0.0, inplace=True)\n",
+    "df_num.isna().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -338,18 +391,48 @@
       "SAT_O2             False\n",
       "BLOOD_PRES_SYS     False\n",
       "BLOOD_PRES_DIAS    False\n",
-      "dtype: bool\n"
+      "dtype: bool\n",
+      "             AGE       TEMP  HEART_RATE     SAT_O2  BLOOD_PRES_SYS  \\\n",
+      "ID                                                                   \n",
+      "1      15.000000  37.000000   90.534247  92.000000      131.638037   \n",
+      "2      18.000000  37.300000  105.000000  97.000000      131.638037   \n",
+      "3      21.000000  38.500000  112.000000  95.000000       85.000000   \n",
+      "4      21.000000  39.200000  113.000000  97.000000      131.638037   \n",
+      "5      22.000000  36.300000   80.000000  92.000000      111.000000   \n",
+      "...          ...        ...         ...        ...             ...   \n",
+      "2050  189.000000  36.739445   90.534247  92.376838      131.638037   \n",
+      "2051   70.856585  36.500000   90.534247  92.376838      131.638037   \n",
+      "2052   70.856585  36.800000  190.000000  98.000000      131.638037   \n",
+      "2053   70.856585  36.739445  120.000000  93.000000      131.638037   \n",
+      "2054   70.856585  36.800000   90.534247  92.376838      131.638037   \n",
+      "\n",
+      "      BLOOD_PRES_DIAS  \n",
+      "ID                     \n",
+      "1           76.124233  \n",
+      "2           76.124233  \n",
+      "3           47.000000  \n",
+      "4           76.124233  \n",
+      "5           70.000000  \n",
+      "...               ...  \n",
+      "2050        76.124233  \n",
+      "2051        76.124233  \n",
+      "2052        76.124233  \n",
+      "2053        76.124233  \n",
+      "2054        76.124233  \n",
+      "\n",
+      "[2054 rows x 6 columns]\n"
      ]
     }
    ],
    "source": [
-    "imp_num = SimpleImputer(strategy='mean')\n",
+    "imp_num = SimpleImputer(missing_values=0.0, strategy='mean', fill_value=0.0)\n",
     "df_num = pd.DataFrame(\n",
     "  imp_num.fit_transform(df_num),\n",
     "  columns=df_num.columns,\n",
     "  index=df_num.index\n",
     ")\n",
-    "print(df_num.isnull().any())"
+    "print(df_num.isnull().any())\n",
+    "print(df_num)"
    ]
   },
   {
@@ -361,40 +444,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      SEX_FEMALE  SEX_MALE         AGE  TEMP  HEART_RATE  SAT_O2  \\\n",
-      "ID                                                                 \n",
-      "1            1.0       0.0   15.000000  37.0         0.0    92.0   \n",
-      "2            1.0       0.0   18.000000  37.3       105.0    97.0   \n",
-      "3            0.0       1.0   21.000000  38.5       112.0    95.0   \n",
-      "4            0.0       1.0   21.000000  39.2       113.0    97.0   \n",
-      "5            0.0       1.0   22.000000  36.3        80.0    92.0   \n",
-      "...          ...       ...         ...   ...         ...     ...   \n",
-      "2050         1.0       0.0  189.000000   0.0         0.0     0.0   \n",
-      "2051         1.0       0.0   70.856585  36.5         0.0     0.0   \n",
-      "2052         1.0       0.0   70.856585  36.8       190.0    98.0   \n",
-      "2053         0.0       1.0   70.856585   0.0       120.0    93.0   \n",
-      "2054         0.0       1.0   70.856585  36.8         0.0     0.0   \n",
+      "      SEX_FEMALE  SEX_MALE         AGE       TEMP  HEART_RATE     SAT_O2  \\\n",
+      "ID                                                                         \n",
+      "1            1.0       0.0   15.000000  37.000000   90.534247  92.000000   \n",
+      "2            1.0       0.0   18.000000  37.300000  105.000000  97.000000   \n",
+      "3            0.0       1.0   21.000000  38.500000  112.000000  95.000000   \n",
+      "4            0.0       1.0   21.000000  39.200000  113.000000  97.000000   \n",
+      "5            0.0       1.0   22.000000  36.300000   80.000000  92.000000   \n",
+      "...          ...       ...         ...        ...         ...        ...   \n",
+      "2050         1.0       0.0  189.000000  36.739445   90.534247  92.376838   \n",
+      "2051         1.0       0.0   70.856585  36.500000   90.534247  92.376838   \n",
+      "2052         1.0       0.0   70.856585  36.800000  190.000000  98.000000   \n",
+      "2053         0.0       1.0   70.856585  36.739445  120.000000  93.000000   \n",
+      "2054         0.0       1.0   70.856585  36.800000   90.534247  92.376838   \n",
       "\n",
       "      BLOOD_PRES_SYS  BLOOD_PRES_DIAS  \n",
       "ID                                     \n",
-      "1                0.0              0.0  \n",
-      "2                0.0              0.0  \n",
-      "3               85.0             47.0  \n",
-      "4                0.0              0.0  \n",
-      "5              111.0             70.0  \n",
+      "1         131.638037        76.124233  \n",
+      "2         131.638037        76.124233  \n",
+      "3          85.000000        47.000000  \n",
+      "4         131.638037        76.124233  \n",
+      "5         111.000000        70.000000  \n",
       "...              ...              ...  \n",
-      "2050             0.0              0.0  \n",
-      "2051             0.0              0.0  \n",
-      "2052             0.0              0.0  \n",
-      "2053             0.0              0.0  \n",
-      "2054             0.0              0.0  \n",
+      "2050      131.638037        76.124233  \n",
+      "2051      131.638037        76.124233  \n",
+      "2052      131.638037        76.124233  \n",
+      "2053      131.638037        76.124233  \n",
+      "2054      131.638037        76.124233  \n",
       "\n",
       "[2054 rows x 8 columns]\n"
      ]
@@ -419,64 +502,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             AGE  TEMP  SAT_O2  BLOOD_PRES_SYS\n",
-      "ID                                            \n",
-      "1      15.000000  37.0    92.0             0.0\n",
-      "2      18.000000  37.3    97.0             0.0\n",
-      "3      21.000000  38.5    95.0            85.0\n",
-      "4      21.000000  39.2    97.0             0.0\n",
-      "5      22.000000  36.3    92.0           111.0\n",
-      "...          ...   ...     ...             ...\n",
-      "2050  189.000000   0.0     0.0             0.0\n",
-      "2051   70.856585  36.5     0.0             0.0\n",
-      "2052   70.856585  36.8    98.0             0.0\n",
-      "2053   70.856585   0.0    93.0             0.0\n",
-      "2054   70.856585  36.8     0.0             0.0\n",
-      "\n",
-      "[2054 rows x 4 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.feature_selection import SelectKBest, chi2\n",
-    "\n",
-    "fs_k_best_chi2 = SelectKBest(chi2, k=4)\n",
-    "fs_k_best_chi2.fit(df_processed, df_exitus_one)\n",
-    "col_filter = fs_k_best_chi2.get_support()\n",
-    "df_k_best_chi2 = df_processed.iloc[:, col_filter]\n",
-    "\n",
-    "print(df_k_best_chi2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             AGE  SAT_O2  BLOOD_PRES_SYS\n",
-      "ID                                      \n",
-      "1      15.000000    92.0             0.0\n",
-      "2      18.000000    97.0             0.0\n",
-      "3      21.000000    95.0            85.0\n",
-      "4      21.000000    97.0             0.0\n",
-      "5      22.000000    92.0           111.0\n",
-      "...          ...     ...             ...\n",
-      "2050  189.000000     0.0             0.0\n",
-      "2051   70.856585     0.0             0.0\n",
-      "2052   70.856585    98.0             0.0\n",
-      "2053   70.856585    93.0             0.0\n",
-      "2054   70.856585     0.0             0.0\n",
+      "             AGE     SAT_O2  BLOOD_PRES_SYS\n",
+      "ID                                         \n",
+      "1      15.000000  92.000000      131.638037\n",
+      "2      18.000000  97.000000      131.638037\n",
+      "3      21.000000  95.000000       85.000000\n",
+      "4      21.000000  97.000000      131.638037\n",
+      "5      22.000000  92.000000      111.000000\n",
+      "...          ...        ...             ...\n",
+      "2050  189.000000  92.376838      131.638037\n",
+      "2051   70.856585  92.376838      131.638037\n",
+      "2052   70.856585  98.000000      131.638037\n",
+      "2053   70.856585  93.000000      131.638037\n",
+      "2054   70.856585  92.376838      131.638037\n",
       "\n",
       "[2054 rows x 3 columns]\n"
      ]
@@ -491,6 +536,40 @@
     "df_perc_mi = df_processed.iloc[:, col_filter]\n",
     "\n",
     "print(df_perc_mi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.55072464 0.12156337 0.92134831 0.15962997 0.07808661]\n",
+      " [0.01724138 0.5942029  0.14685315 0.97752809 0.15962997 0.07808661]\n",
+      " [0.03448276 0.76811594 0.15909091 0.95505618 0.0984252  0.04316547]\n",
+      " ...\n",
+      " [0.32101486 0.52173913 0.29545455 0.98876404 0.15962997 0.07808661]\n",
+      " [0.32101486 0.51296312 0.17307692 0.93258427 0.15962997 0.07808661]\n",
+      " [0.32101486 0.52173913 0.12156337 0.92558245 0.15962997 0.07808661]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "mms = MinMaxScaler()\n",
+    "df_num_mms = mms.fit_transform(df_num)\n",
+    "print(df_num_mms)"
    ]
   }
  ],
