add feature selection

--- a/covid2.ipynb
+++ b/covid2.ipynb
@@ -502,7 +502,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      SEX_FEMALE         AGE     SAT_O2  BLOOD_PRES_SYS  BLOOD_PRES_DIAS\n",
+      "ID                                                                      \n",
+      "1            1.0   15.000000  92.000000      131.638037        76.124233\n",
+      "2            1.0   18.000000  97.000000      131.638037        76.124233\n",
+      "3            0.0   21.000000  95.000000       85.000000        47.000000\n",
+      "4            0.0   21.000000  97.000000      131.638037        76.124233\n",
+      "5            0.0   22.000000  92.000000      111.000000        70.000000\n",
+      "...          ...         ...        ...             ...              ...\n",
+      "2050         1.0  189.000000  92.376838      131.638037        76.124233\n",
+      "2051         1.0   70.856585  92.376838      131.638037        76.124233\n",
+      "2052         1.0   70.856585  98.000000      131.638037        76.124233\n",
+      "2053         0.0   70.856585  93.000000      131.638037        76.124233\n",
+      "2054         0.0   70.856585  92.376838      131.638037        76.124233\n",
+      "\n",
+      "[2054 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest, chi2\n",
+    "\n",
+    "fs_k_best_chi2 = SelectKBest(chi2, k=5)\n",
+    "fs_k_best_chi2.fit(df_processed, df_exitus_one)\n",
+    "col_filter = fs_k_best_chi2.get_support()\n",
+    "df_k_best_chi2 = df_processed.iloc[:, col_filter]\n",
+    "\n",
+    "print(df_k_best_chi2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -547,20 +585,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.         0.55072464 0.12156337 0.92134831 0.15962997 0.07808661]\n",
-      " [0.01724138 0.5942029  0.14685315 0.97752809 0.15962997 0.07808661]\n",
-      " [0.03448276 0.76811594 0.15909091 0.95505618 0.0984252  0.04316547]\n",
+      "(2054, 5)\n",
+      "[[1.         0.         0.92134831 0.15962997 0.07808661]\n",
+      " [1.         0.01724138 0.97752809 0.15962997 0.07808661]\n",
+      " [0.         0.03448276 0.95505618 0.0984252  0.04316547]\n",
       " ...\n",
-      " [0.32101486 0.52173913 0.29545455 0.98876404 0.15962997 0.07808661]\n",
-      " [0.32101486 0.51296312 0.17307692 0.93258427 0.15962997 0.07808661]\n",
-      " [0.32101486 0.52173913 0.12156337 0.92558245 0.15962997 0.07808661]]\n"
+      " [1.         0.32101486 0.98876404 0.15962997 0.07808661]\n",
+      " [0.         0.32101486 0.93258427 0.15962997 0.07808661]\n",
+      " [0.         0.32101486 0.92558245 0.15962997 0.07808661]]\n"
      ]
     }
    ],
@@ -568,7 +607,8 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "mms = MinMaxScaler()\n",
-    "df_num_mms = mms.fit_transform(df_num)\n",
+    "df_num_mms = mms.fit_transform(df_k_best_chi2)\n",
+    "print(df_num_mms.shape)\n",
     "print(df_num_mms)"
    ]
   }
