--- a/covid2.ipynb
+++ b/covid2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -22,8 +22,30 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from utils import *\n",
     "df = pd.read_csv(\"COVID19_data.csv\", index_col=\"ID\")\n",
     "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SEX', 'EXITUS', 'DESTINATION']\n",
+      "['AGE', 'DAYS_HOSPITAL', 'DAYS_ICU', 'TEMP', 'HEART_RATE', 'GLUCOSE', 'SAT_O2', 'BLOOD_PRES_SYS', 'BLOOD_PRES_DIAS']\n"
+     ]
+    }
+   ],
+   "source": [
+    "CAT_VARS = get_categorical_variables(df)\n",
+    "NUM_VARS = get_numerical_variables(df)\n",
+    "print(CAT_VARS)\n",
+    "print(NUM_VARS)"
    ]
   },
   {
@@ -35,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -51,9 +73,8 @@
    "source": [
     "from collections import Counter\n",
     "\n",
-    "for var in df:\n",
-    "  if df[var].dtypes == object:\n",
-    "    print(var, Counter(df[var]))"
+    "for var in CAT_VARS:\n",
+    "  print(var, Counter(df[var]))"
    ]
   },
   {
@@ -65,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +106,8 @@
     }
    ],
    "source": [
-    "for var in df:\n",
-    "  if df[var].dtypes != object:\n",
-    "    print(var, Counter(df[var])[0])"
+    "for var in NUM_VARS:\n",
+    "  print(var, Counter(df[var])[0])"
    ]
   },
   {
@@ -1313,6 +1333,101 @@
    ],
    "source": [
     "df_processed.filter(['BLOOD_PRES_SYS', 'BLOOD_PRES_DIAS']).corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MODELING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID\n",
+       "1       0\n",
+       "2       0\n",
+       "3       0\n",
+       "4       0\n",
+       "5       0\n",
+       "       ..\n",
+       "2050    0\n",
+       "2051    0\n",
+       "2052    0\n",
+       "2053    0\n",
+       "2054    0\n",
+       "Name: EXITUS, Length: 2054, dtype: int64"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_exitus['EXITUS'].apply(lambda x: 0 if x == 'NO' else 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(kernel='linear')"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svc_model = SVC(kernel='linear')\n",
+    "svc_model.fit(df_num_mms, df_exitus['EXITUS'].apply(lambda x: 0 if x == 'NO' else 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x = []\n",
+    "y = []\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=4, stratify=df['cat'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svc_model.predict([[22,1,0,36.3,80,92,111,70]])"
    ]
   }
  ],
